@@ -1,5 +1,9 @@
 0.5.0 (not yet released)
 
+	* http: added "precompressed" handler, preferring .gz / .bz2 files over
+	their equivalents and adding respective Content-Encoding header.
+	The precompressed file version is only preferred if both files match their
+	mtimes (semantically equivalent to nginx)
 	* flow: ported from LLVM framework 2.9 to 3.0
 	* http: fixes #541 (warn on backlog > SOMAXCONN)
 	* SqlStatement: code cleanup and logging readability improvements
